plugins {
    id 'java'
    id 'application'
    // https://github.com/johnrengelman/shadow
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    // https://github.com/mabe02/lanterna
    implementation 'com.googlecode.lanterna:lanterna:3.1.1'

    // https://github.com/rhuss/jolokia
    implementation 'org.jolokia:jolokia-core:1.6.2'
}

mainClassName = 'me.ivanyu.jmxviewer.App'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

jar {
    manifest {
        attributes(
                'Class-Path': configurations.compileClasspath.collect { it.getName() }.join(' '),
                'Main-Class': mainClassName
        )
    }
}

shadowJar {
}

compileJava {
    options.with {
        compilerArgs.addAll([
                '--add-exports', 'jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
                '--add-exports', 'jdk.attach/sun.tools.attach=ALL-UNNAMED'
        ])
    }
}
